formio.css
/**
 * Based on CLEAN FORM css
 * http://www.mattvarone.com/web-design/clean-accesible-form-foundation/
 *
 * Various edits, changes etc made. For a full list of what was changed
 * (and why), see http://github.com/pospi/formio/commits/master/formio.css
 *
 */

/* General */

.formio, form.formio {
	line-height: 1.25em;
	text-align:left;
	position:relative;
	background: transparent;
	border: 0;
}

.formio div.row, .formio fieldset, .formio div.group div.row {
	clear: left;
	padding: 0.5em;
	margin: 0;
}

.formio label {
	padding: 0;
	margin: 0 1em 0 0;
}

.formio div.blck { position: relative; }
.formio div.blck .row { background: transparent; }
.formio div.blck .row label { display: none; }
.formio div.group .row label { display: inline; }
.formio div.blck input[type=checkbox], .formio div.blck input[type=radio], .formio div.blck input[type=submit], .formio div.blck input[type=reset], .formio div.blck input[type=button] { width: auto; }
.formio div.blck .pad { height: 1em; }

.formio fieldset legend {
	font-size: 1.2em;
	padding: 0;											/* IE only (see overrides at bottom) */
}

.formio label, .formio .multiple legend {
	position: relative;
	font-size: 1em;
}

.formio input, .formio div.readonly {
	line-height: 1em;
}
.formio div.readonly { padding-top: 0.25em; }

.formio input, .formio textarea, .formio select {
	font-size:1em;
}

.formio textarea {
	height: 8em;		/* default textarea height */
	vertical-align: top;
}

.formio .multiple {
	border: 0;
}


.formio .multiple input {
	width:auto;
	border:none;
	cursor:pointer;
}

.formio .multiple label {
	float:left;
	font-weight: normal;
	margin: 0;
}
.formio .multiple.col2 label { width:50%; }
.formio .multiple.col3 label { width:33%; }
.formio .multiple.col4 label { width:25%; }
.formio .multiple.col5 label { width:20%; }

.formio .multiple legend .required {	/* shift required asterisk up in fieldset element legends */
	top: 0.25em;
}

.formio .multiple p.hint, .formio .multiple p.err { padding: 1em 0 0 0; margin-left: 0; }
.formio .blck .row p.hint, .formio .blck .row p.err { margin-left: 0; }

/* Type-specific */

.formio .checkbox input, .formio .checkbox label.checkbox, .formio input[type=radio] {
	width: auto;
	display: inline;
	font-weight: normal;
	border: 0;
}

.formio input[type=text], .formio input[type=password] {
	padding-right: 1em;		/* this balances out the currency input's left padding... */
}

.formio img.captcha {
	vertical-align: middle;
}

.formio .currency {
	position: relative;
	white-space: nowrap;
}

.formio .currency input {
	padding-left: 1em;
	padding-right: 0;
	width: 100%;
}

.formio .currency span {
	position: absolute;
	left: 0.3em;
	top: 0.15em;
	line-height:2em;								/* IE only (see overrides at bottom) */
}

.formio .repeater .row {
	padding-bottom: 0;
}

.formio .daterange .fromtime, .formio .daterange .totime,
.formio .datetime .datetimeinput {
	white-space: nowrap;
}

.formio input.date { width: 6em !important; padding-right: 0; }
.formio input.time { width: 3em !important; padding-right: 0; }

/* Tokenised multivalue autocomplete */

.formio ul.token-input-list {
	line-height: 1em;
	margin: 0 1em 0 0;
	width: 100%;
	padding: 0;
	list-style-type: none;
}

.formio li.token-input-token {
	float: left;
}

.formio .token-input-delete-token {
	margin-left: 0.3em;
}

.formio li.token-input-input-token input {
	border: 0;
}

/* Button */

.formio button, .formio input[type=submit], .formio input[type=reset], .formio input[type=button] {
	font-size:1em;
	cursor:pointer;
}

/* information */

.formio .status {
	margin-bottom:1em;
	text-align: justify;
}

.formio .required {
	font-weight: bold;
	font-size: 0.8em;
	color: #900;
}

.formio .err, .formio .errSummary {
	font-weight:bold;
	color: #900;
}

.formio li.sectionErrors { border-color: #E8AEAE; }
.formio li.sectionErrors a {	color: #A82626; }
.formio div.tabNav { float: right; }

.formio p.hint {
	color: #5F5F5F;
}

.formio p.hint, .formio p.err {
	font-size: 0.8em;
	clear: left;
}

.formio .errSummary {
	font-size: 1em;
	margin: 0.5em 0;
}

/* Browser-specific style overrides (by which I mean hacks) */

@-moz-document url-prefix() {							/* Gecko overrides */
	.formio .currency span {
		line-height: 0.9em;
	}
}
@media screen and (-webkit-min-device-pixel-ratio:0) {	/* Webkit overrides */
	.formio .currency span {
		line-height: 1.5em;
	}
}

